--- a/maze/src/maze/maze.component.html
+++ b/maze/src/maze/maze.component.html
@@ -1,6 +1,3 @@
 <div *ngFor="let room of maze.rooms; trackBy: trackById">
-  <div class="room" id="{{ room.roomNumber.join(',') }}" [style.background]="room.color">
-    <div *ngFor="let side of room.sides; trackBy: trackById"
-      class="side {{ KeyOf(Direction, side.direction) }}" [class.wall]="isWall(side)" [class.door]="isDoor(side)" [style.background]="side.color"></div>
-  </div>
+  <room [room]="room"></room>
 </div>
