--- a/maze/src/maze/maze.component.html
+++ b/maze/src/maze/maze.component.html
@@ -1,3 +1,6 @@
 <div *ngFor="let room of maze.rooms; trackBy: trackById">
   <room [room]="room"></room>
 </div>
+<div id="header">
+  <a (click)="toggleMap()">{{toggle.map ? 'Hide ' : 'Show '}}Map</a>
+</div>
