--- a/maze/src/maze/components/room/room.component.html
+++ b/maze/src/maze/components/room/room.component.html
@@ -1,3 +1,3 @@
-<div class="room" id="{{ room.roomNumber.join(',') }}" [style.background]="room.color">
+<div class="room" id="{{ room.id.join(',') }}" [style.background]="room.color">
   <side *ngFor="let side of room.sides; trackBy: trackById" [side]="side"></side>
 </div>
