--- a/maze/src/maze/maze.component.html
+++ b/maze/src/maze/maze.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let room of maze.rooms; trackBy: trackById">
-  <room [room]="room" [user]="user"></room>
+  <room [room]="room"></room>
 </div>
 <div id="header">
   <a (click)="toggleMap()">{{toggle.map ? 'Hide ' : 'Show '}}Map</a>
