Implemented adding/removing rooms based on distance to user

--- a/maze/src/maze/maze.component.html
+++ b/maze/src/maze/maze.component.html
@@ -2,14 +2,7 @@
   <room [room]="room"></room>
 </div>
 <div id="header">
-  <ul>
-    <li><a (click)="toggleMap()">{{toggle.map ? 'Hide ' : 'Show '}}Map</a></li>
-    <li><p>{{ game.actors.length }} actors</p>
-      <ol>
-        @for (actor of game.actors; track actor.id) {
-          <li>{{ actor.text}}</li>
-        }
-      </ol>
-    </li>
-  </ul>
+  <div><a (click)="toggleMap()">{{toggle.map ? 'Hide ' : 'Show '}}Map</a></div>
+  <div>{{ userPosition.x }}, {{ userPosition.z }}</div>
+  <div>{{ userAnimations.join(", ") }}</div>
 </div>
