--- a/maze/src/maze/maze.component.scss
+++ b/maze/src/maze/maze.component.scss
@@ -3,6 +3,7 @@
     left: 0;
     top: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: start;
     color: white;
