whew! found room.setSide bug

--- a/maze/src/maze/components/room/side/wall/wall.component.html
+++ b/maze/src/maze/components/room/side/wall/wall.component.html
@@ -1,4 +1,4 @@
 <div 
     class="side {{ KeyOf(Direction, wall.direction) }} door"
-    [style.background]="'transparent'">
+    [style.background]="wall.color">
 </div>
