--- a/maze/src/maze/components/room/room.component.scss
+++ b/maze/src/maze/components/room/room.component.scss
@@ -1,6 +1,6 @@
 .room {
-    --dimensions: 23;
-    --wall-width: 0.15rem;
+    --dimensions: 12;
+    --wall-width: .5rem;
 
     width: calc(min(100vw, 100vh) / var(--dimensions));
     height: calc(min(100vw, 100vh) / var(--dimensions));
