--- a/maze/src/maze/maze.component.scss
+++ b/maze/src/maze/maze.component.scss
@@ -17,7 +17,7 @@
     border-radius: 100%;
     left: 0;
     top: 0;
-    animation: .5s infinite alternate pulse;
+    // animation: .5s infinite alternate pulse;
 }
 
 #header {
