--- a/maze/src/maze/maze.component.html
+++ b/maze/src/maze/maze.component.html
@@ -10,6 +10,7 @@
     <span id="map-icon"></span>
     <a (click)="toggleMap()">{{toggle.map ? 'Hide ' : 'Show '}}Map</a>
   </div>
+
   <div>
     <pre [style.font-size.px]="10">
   {{ userPosition().x.toFixed(1) }}, 
@@ -17,9 +18,7 @@
   {{ userPosition().z.toFixed(1) }}</pre>
   </div>
 </div>
-<div *ngIf="target" id="target">
-  {{ target.message }}
-</div>
+<div id="target" *ngIf="target">{{ target.message }}</div>
 <div *ngIf="engagement" id="engagement">
   <button id="exit-engagement" (click)="exitEngagement()">X</button>
   <article [innerHTML]="engagement.content" [style.background]="engagement.mapSite.color"></article>
