--- a/maze/src/maze/maze.component.scss
+++ b/maze/src/maze/maze.component.scss
@@ -115,11 +115,14 @@ table {
     position: absolute;
     width: 1rem;
     height: 1rem;
-    background: red;
+    background: blue;
+    color: red;
+    transform: rotateZ(10deg);
     border-radius: 100%;
     left: 0;
     top: 0;
     // animation: .5s infinite alternate pulse;
+    font-size: 2.55rem;
 }
 
 #header {
