--- a/maze/src/maze/maze.component.html
+++ b/maze/src/maze/maze.component.html
@@ -10,14 +10,24 @@
 </i>
 
 <div id="header">
-  <div>
+  <div 
+    [style.width.%]="100"
+    [style.width.%]="100"
+    [style.display]="'flex'"
+    [style.align-items]="'center'">
     <span id="map-icon"></span>
     <a (click)="toggleMap()">{{toggle.map ? 'Hide ' : 'Show '}}Map</a>
+    <span
+      [style.width.%]="20"
+      [style.float]="'right'"
+      [style.text-align]="'right'"
+      [style.font-size.rem]="2"
+    >{{ userSpeed() }}</span>
   </div>
-  <div *ngIf="user">
+  <div *ngIf="user" [style.width.%]="100">
     <a (click)="toggleFirstPerson()">{{user.firstPerson ? '3rd Person ' : '1st Person '}}</a>
   </div>
-  <div [style.paddingLeft.px]="30">
+  <div [style.paddingLeft.px]="30" [style.width.%]="100">
     <table>
       <thead>
         <tr>
@@ -47,8 +57,9 @@
 </div>
 
 <div id="target" *ngIf="target && cursor.mouse"
+  [style.background]="target.background"
   [style.left.px]="cursor.left" 
-  [style.top.px]="cursor.top">>{{ target.message }}</div>
+  [style.top.px]="cursor.top">{{ target.message }}</div>
 
 <div *ngIf="engagement" id="engagement">
   <button id="exit-engagement" (click)="exitEngagement()">X</button>
